## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.3 foreign

asn1dir = $(includedir)/@PACKAGE@/asn1
asn1_DATA = rfc1155-smi.asn1	\
	rfc1157-snmp.asn1	\
	rfc1213-mib2.asn1	\
	any.asn1		\
	asn1module.asn1		\
	err-test.asn1		\
	ex1.asn1		\
	p-rec.asn1		\
	tbl.asn1		\
	asn-useful.asn1
EXTRA_DIST = $(asn1_DATA)
