## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.3 foreign

cxxpkgincludedir = $(pkgincludedir)/c++
cxxpkginclude_HEADERS = asn-any.h asn-bits.h asn-bool.h asn-buf.h asn-config.h \
	asn-enum.h asn-incl.h asn-int.h asn-len.h asn-list.h asn-null.h \
	asn-octs.h asn-oid.h asn-real.h asn-tag.h asn-type.h hash.h \
	init.h meta.h print.h str-stk.h tcl-if.h


