## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.3 foreign

cpkgincludedir = $(pkgincludedir)/c
cpkginclude_HEADERS = asn-any.h asn-bits.h asn-bool.h asn-config.h asn-enum.h \
	asn-incl.h asn-int.h asn-len.h asn-list.h asn-null.h asn-octs.h asn-oid.h \
	 asn-real.h asn-tag.h exp-buf.h gen-buf.h hash.h min-buf.h nibble-alloc.h \
	print.h sbuf.h str-stk.h tbl-dbg.h tbl-dec.h tbl-enc.h tbl-free.h \
	tbl-gen-c-hdr.h tbl-gen.h tbl-incl.h tbl-print.h tbl-util.h

